# luxe-tauri

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.claude/: settings.local.json
scripts/: sync-version.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: Isp6s.toml  face_table.toml  normal_table.toml
src-tauri/resources/translations/: ar_SA.json  cs_CZ.json  de_DE.json  en_US.json  es_ES.json  fr_FR.json  it_IT.json  ja_JP.json  ko_KR.json  pl_PL.json  pt_BR.json  ru_RU.json  tr_TR.json  vi_VN.json  zh_CN.json  zh_TW.json
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs  poetry.rs  shortcuts.rs  state.rs  tray.rs  window_geom.rs
src-tauri/src/commands/: close_cmds.rs  cpp_cmds.rs  fs_cmds.rs  i18n_cmds.rs  image_cmds.rs  mod.rs  poetry_cmds.rs  shortcut_cmds.rs  state_cmds.rs  text_cmds.rs  window_cmds.rs
src-tauri/src/config/: face_table.rs  isp6s_schema.rs  mod.rs  normal_table.rs  state_file.rs  state_schema.rs  translations.rs
src-tauri/src/cpp_parser/: card_source.rs  mod.rs  parser.rs  path_query.rs  search.rs  types.rs
src-tauri/src/image_scan/: mod.rs
src-tauri/tests/: cpp_parser_diff.rs
src/hooks/: useShellBootstrap.ts  useWindowBootstrap.ts
src/ipc/: client.ts  cppParser.ts  faceTable.ts  imageScan.ts  normalTable.ts  shell.ts  stateIo.ts  text.ts
src/locales/: i18n.ts  index.ts
src/services/: appVersion.ts  updateCheck.ts
src/stores/: isp6sVisualStore.ts  mtkStore.ts  poetryStore.ts  settingsStore.ts  shortcutStore.ts  updateStore.ts  windowStore.ts
src/styles/: globals.css
src/theme/: fluent-tokens.ts
(+48 files in other folders)
